fixed info stats wrapping and improved n-container padding

--- a/httpdocs/css/ntopng.css
+++ b/httpdocs/css/ntopng.css
@@ -874,6 +874,9 @@ path.link {
 .side-collapse a {
   text-align: left;
 }
+.info-stats div.down, .info-stats div.up{
+  min-width: 12rem;
+}
 .info-stats div.down {
   margin-top: -.55rem;
 }
@@ -960,17 +963,17 @@ path.link {
 
 @media (min-width: 480px) and (max-width: 800px) {
   #n-container {
-    padding-top: 16rem !important;
+    padding-top: 9.8% !important;
   }
 }
 @media (min-width: 800px) and (max-width: 992px) {
   #n-container {
-    padding-top: 12rem !important;
+    padding-top: 10% !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1500px) {
   #n-container {
-    padding-top: 2rem !important;
+    padding-top: 2.4% !important;
   }
 }
 
